unpackaged/main/default/objects/Product2/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>