unpackaged/main/default/objects/Product2/fields/Scholarships__c.field-meta.xml
<CustomField>
    <fullName>Scholarships__c</fullName>
    <label>Scholarships</label>
    <length>255</length>
    <type>Text</type>
</CustomField>