unpackaged/main/default/objects/Product2/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <label>Tuition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>